# scoop-better-shimexe

./: .clang-format  .gitignore  Makefile  README.md  compile_flags.txt  meson.build  repshims.bat  shim.cpp  shim.manifest
.github/workflows/: build.yml  compile.yml  release.yml
